slurm-36583672.out
  File "./projects/blip2/TestFile.py", line 13
    file.write(f"{x[i]}**2 = {y[i]}; ")
                                     ^
SyntaxError: invalid syntax
